--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^1.0.0",
+    "@prisma/client": "4.16.2",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
+    "dotenv": "^16.3.1",
+    "googleapis": "^120.0.0",
     "next": "13.4.9",
     "next-auth": "^4.22.1",
     "nodemailer": "^6.9.3",
@@ -18,5 +23,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2"
+  },
+  "devDependencies": {
+    "prisma": "^4.16.2"
   }
 }
